# dircmp

./: Cargo.toml  README.md
src/: main.rs  perf.data  text.rs
